# ethers-websockets-tests

./: .example.env  Cargo.toml  README.md  makefile
contracts/: TokenChecks.sol
src/: TokenChecker.abi  main.rs  token.rs  tokenList.json
