[package]
name = "async-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.29.1", features=["full"]}
ethers = {version="2.0.7", features=["ws"]}
dotenv = "0.15.0"
url = "2.4.0"
eyre = "0.6.8"
futures = "0.3.28"
structopt = "0.3.26"
serde = "1.0.166"
serde_json = "1.0"
lazy_static = "1.4.0"
